Adafruit's Arduino NINA-W102 firmware 1.6.0 - 2019.12.28

* Updated to build with ESP-IDF 3.3.1

Adafruit's Arduino NINA-W102 firmware 1.5.0 - 2019.10.21

* Added Digital Read and Analog Read

Adafruit's Arduino NINA-W102 firmware 1.4.0 - 2019.10.09

* Updated to use ESP-IDF 3.3 (LTS)
* Updated WiFiSSLClient
* Workflow improvements in Makefile

Adafruit's Arduino NINA-W102 firmware 1.3.1 - 2019.04.24

* Added WPA2 Enterprise
* Updated README.md to indicate this is Adafruit's fork
* Updated README.md with current, reproducible build instructions
* Updated CHANGELOG with various Adafruit changes

Adafruit's Arduino NINA-W102 firmware 1.3.0 - 2019.04.04

* Rev'd version in CommandHandler.cpp
* Added version number to combine.py script

Adafruit's Arduino NINA-W102 firmware 1.2.2 - 2019.04.04

* Added support for WPA2 Enterprise

Adafruit's Arduino NINA-W102 firmware 1.2.2 - 2019.02.28

* First official Adafruit release

Arduino NINA-W102 firmware 1.2.1 - 2018.11.16

* Fixed factory SSL certificates being incorrectly parsed due to OOM caused by Bluetooth inclusion

Arduino NINA-W102 firmware 1.2.0 - 2018.11.13

* Fixed DNS servers not sticking when static IP address is used
* Added HCI UART mode on boot, enabled if SS is LOW
* Erase NVS flash on init failure

Arduino NINA-W102 firmware 1.1.0 - 2018.10.4

* WiFi is now stopped before connecting to AP
* Changed default STA hostname to "arduino-XXYY"
* Switched to all channel scan when connecting to AP in STA mode
* Fixed static IP's support in STA + AP modes
* Return failure on bad AP params
* Moved certificates to separate mmapped partition, added a larger set of built-in root CA's
* Updated to use esp-idf v3.1

Arduino NINA-W102 firmware 1.0.0 - 2018.06.28

* Initial release